src/objects/Contract_EVNT__c.object
<CustomObject>
    <description>Contains contract details between Lilly and event speakers. 
Created by John A Adams 10/2/2013</description>
    <fields>
        <fullName>Country_Tier_EVNT_MVN__c</fullName>
        <description>Country and Tier levels that fee is based upon
Created by John A Adams 10/2/2013</description>
        <label>Country Tier</label>
        <picklist>
            <picklistValues>
                <fullName>France Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France Tier 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany Tier 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Tier 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Time_EVNT_MVN__c</fullName>
        <description>Amount of hours during the event speaker is required
Created by John A Adams 10/2/2013</description>
        <label>Event Time</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Values_EVNT_MVN__c</fullName>
        <description>Posible Fee values that can be used depending on Country and Tier selected</description>
        <label>Fee Values</label>
        <picklist>
            <controllingField>Country_Tier_EVNT_MVN__c</controllingField>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payee_Address_ENNT_MVN__c</fullName>
        <description>Payee adress information
Created by John A Adams 10/2/2013</description>
        <label>Payee Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payee_Name_EVNT_MVN__c</fullName>
        <description>Name of Payee
Created by John A Adams 10/2/2013</description>
        <label>Payee Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Required_EVNT_MVN__c</fullName>
        <description>Created by John A Adams 10/2/2013</description>
        <label>Payment Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preparation_Time_EVNT_MVN__c</fullName>
        <description>Time in hours for contracted for Speakers preparation</description>
        <label>Preparation Time</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number_EVNT_MVN__c</fullName>
        <description>Social Security Number  for Speaker to be used in contract.
Created by John A Adams 10/2/2013</description>
        <label>Social Security Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Service_EVNT_MVN__c</fullName>
        <description>Associates the contracts to the Speakers (Accounts) via the Speakers Services.
Created by John A Adams 10/2/2013</description>
        <label>Speaker Service</label>
        <referenceTo>Speaker_Service_EVNT__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Hours_of_Service_EVNT_MVN__c</fullName>
        <formula>Event_Time_EVNT_MVN__c  +  Preparation_Time_EVNT_MVN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours of Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Service_EVNT_MVN__c</fullName>
        <description>Type of service being contracted for
Created by John A Adams 10/2/2013</description>
        <label>Type of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Speaking, Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaking, Chairman Symposium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board, Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting ad hoc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>VATID_EVNT_MVN__c</fullName>
        <description>A value added tax identification number or VAT identification number (VATIN) is an identifier used in many countries, including the countries of the European Union, for value added tax purposes.
Created by John A Adams 10/2/2013</description>
        <label>VATIN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CNTR-{000000}</displayFormat>
        <label>Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>